# yolov8n-ports-adapters

./: .gitignore  .importlinter  AGENT.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
assets/: README.md
assets/demo/: README.md  videos.json
assets/video/: videos.json
backend/: .dockerignore  .importlinter  Dockerfile  README.md
backend/scripts/: convert_trafficdb_demo_videos.py  generate_demo_videos.py
backend/src/inference/: bootstrap.py  config.py
backend/src/inference/adapters/: inference.py  media.py
backend/src/inference/domain/: exceptions.py  model.py
backend/src/inference/entrypoints/: app.py  routes.py  schemas.py
backend/src/inference/service_layer/: errors.py  media.py  ports.py  services.py
backend/tests/: conftest.py  support.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_media.py  test_services.py
docs/: architecture.md  architecturev1.md  assets.md  mediaDetectionDesign.md  ports-and-adapters-trace.md
frontend/: Dockerfile  eslint.config.mjs  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: generate_demo_videos.py
src/inference/: __init__.py  bootstrap.py  config.py
src/inference/adapters/: inference.py  media.py
src/inference/domain/: __init__.py  exceptions.py  model.py
src/inference/entrypoints/: __init__.py  app.py  routes.py  schemas.py
src/inference/service_layer/: ports.py  services.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_domain.py  test_media.py  test_services.py
(+5 files in other folders)
