[project]
name = "assignment-inference-python"
version = "0.1.0"
description = "Clean Architecture FastAPI service for YOLO image and video upload inference."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
vision = [
    "opencv-python>=4.10.0",
    "ultralytics>=8.3.0",
]
dev = [
    "httpx>=0.27.0",
    "import-linter>=2.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inference"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: exercises real model/runtime dependencies",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
exclude = ["tests"]

[[tool.mypy.overrides]]
module = ["cv2.*", "numpy.*"]
ignore_missing_imports = true
